# Legra

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  publish-v0.1.3.yml  release.yml
Packaging/homebrew/: README.md
Packaging/homebrew/Casks/: legra.rb
Specifications/: chrome-extension-import-plan.md  development-checkpoints-and-tests.md  metadata-autofill-register-plan.md  spec-template.md  ui-regression-checklist.md
chrome-extension/: README.md  manifest.json  popup.css  popup.html  popup.js  popup.test.cjs  service_worker.js
chrome-extension/native-messaging/: app.legra.importer.example.json  com.mizuno.paper_manager.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  platform.rs
src-tauri/tests/: native_host_protocol.rs
