[package]
name = "legra"
version = "0.2.4"
description = "Desktop paper manager for local PDFs, notes, and BibTeX export"
authors = ["Koki Mizuno"]
edition = "2021"
license = "MIT"
default-run = "legra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paper_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.44"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20"
urlencoding = "2"
pdf-extract = "0.10"
regex = "1"
sha2 = "0.10"
trash = "5.2"
